epic-game-client/src/App.css
.clickable {
  cursor: pointer;
}

.profileImg {
  width: 200px;
  padding: 5px;  
}

.playerHud {
  background-color: #9b401b;
  padding: 15px;
}

.pathOptionBox {
  height: 150px;
  margin: 10px;
}



.textbox {
  margin: 56px;
}

.roadBlockDesc {
  padding: 5% 0px;
}

ul  {
  list-style: none;
}

.CharacterSelectBox {
  background-color: #647584;
  width: 400px;
  padding: 25px;
  margin-right: auto;
  margin-left:auto;
  margin-bottom:10px;
}

.combatMessagePanel {
  margin-top: 450px;
}

.health {
  margin-top: -175px;
}

.abilityBox {
  padding: 10px;
}

#healthBar {
  /* width: 300px; */
  margin-left: 170px;
  margin-top: -145px;
}

#enemyHealthBar {
  width: 250px;
  margin-top: -160px;
}

.enemyName {
  margin-top: -250px;
  margin-right: -25px;
}

.enemyHealth {
  margin-top: -200px;

}

.enemyPanel {
  background-color: #22282d;
  padding: 15px;
}

.returnToHome {
text-align: center;

}

.roadBlockDesc {
  font-family: 'Dawning of a New Day', cursive;
}

